--- a/index7.html
+++ b/index7.html
@@ -46,7 +46,7 @@
               <img src="./img/node.png" alt="Node.js" class="card-img-top img-fluid">
              <div class="card-body text-center">
                <h3 class="card-title">Node.js</h3>
-              <a href="https://nodejs.org/en/">Click Here</a>
+              <a href="https://nodejs.org/en/" target="_blank">Click Here</a>
              </div>
             </div>
           </div>
@@ -55,7 +55,7 @@
               <img src="./img/mongo.png" alt="Mongo" class="card-img-top img-fluid">
              <div class="card-body text-center">
                <h3 class="card-title">Mongo DB</h3>
-               <a href="https://www.mongodb.com/">Click Here</a>
+               <a href="https://www.mongodb.com/" target="_blank">Click Here</a>
              </div>
             </div>
           </div>
@@ -64,7 +64,7 @@
               <img src="./img/react.png" alt="React" class="card-img-top img-fluid">
              <div class="card-body text-center">
                <h3 class="card-title">React</h3>
-              <a href="https://reactjs.org/">Click Here</a>
+              <a href="https://reactjs.org/" target="_blank">Click Here</a>
              </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
               <img src="./img/webpack.png" alt="Webpack" class="card-img-top img-fluid">
              <div class="card-body text-center">
                <h3 class="card-title">Webpack</h3>
-              <a href="https://webpack.js.org/">Click Here</a>
+              <a href="https://webpack.js.org/" target="_blank">Click Here</a>
              </div>
             </div>
           </div>
